Fixing Header experience on mobile

--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -1,4 +1,3 @@
-
 header {
   padding: 24px 0px 35px 0px;
   margin: auto;
@@ -11,7 +10,8 @@ header {
   align-items: center;
   text-transform: uppercase;
   padding: auto;
-  margin: 0 auto; /* Center the entire .desktop-menu within the header */
+  margin: 0 auto;
+  /* Center the entire .desktop-menu within the header */
   list-style: none;
 }
 
@@ -33,7 +33,7 @@ header {
 }
 
 header.dark nav ul li a {
-  color:#ffffff;
+  color: #ffffff;
 }
 
 nav ul li a img {
@@ -51,7 +51,7 @@ nav ul li a img {
   width: auto;
   height: 40px !important;
   margin: 0px 8px;
-  padding:0px;
+  padding: 0px;
 }
 
 .loading .loading-item {
@@ -95,7 +95,7 @@ nav ul li a img {
 
 .mobile-menu li {
   margin-bottom: 20px;
-  padding-top:20px;
+  padding-top: 20px;
 }
 
 .language-selector {
@@ -104,14 +104,17 @@ nav ul li a img {
 }
 
 .language-selector span {
-  display: flex; /* This makes it a flex container */
-  align-items: center; /* Centers items vertically */
-  gap: 8px; /* Adds space between text and icon */
+  display: flex;
+  /* This makes it a flex container */
+  align-items: center;
+  /* Centers items vertically */
+  gap: 8px;
+  /* Adds space between text and icon */
   font-weight: bold;
 }
 
 .language-options {
-  display: none !important;
+  display: block !important;
   position: absolute;
   top: 100%;
   left: 0;
@@ -127,9 +130,6 @@ body.dark .language-options {
   background-color: #0D0D0D;
 }
 
-.language-selector:hover .language-options {
-  display: block !important;
-}
 
 .language-options li {
   padding: 8px 12px;
@@ -158,12 +158,62 @@ body.dark .language-options li:hover {
   width: 30px !important;
 }
 
+/* Loading Styles */
+.loading {
+  position: relative;
+}
+
+.loading .loading-item a {
+  visibility: hidden;
+}
+
+/* New loading styles for mobile menu icon and mobile logo */
+.loading .mobile-menu-icon,
+.loading #coffeeLogoMobile {
+  background: linear-gradient(90deg, #F9F5F2, #CCD1D5);
+  background-size: 200% 200%;
+  animation: loading 1.5s infinite;
+}
+
+.loading .mobile-menu-icon {
+  width: 48px !important;
+  height: 48px !important;
+  border-radius: 4px !important;
+}
+
+.loading #coffeeLogoMobile {
+  width: 140px !important;
+  height: 140px !important;
+  border-radius: 50% !important;
+  /* Ensuring it's a perfect circle */
+}
+
+.loading .mobile-menu-icon img,
+.loading #coffeeLogoMobile img {
+  visibility: hidden;
+}
+
+@keyframes loading {
+  0% {
+    background-position: 0% 50%;
+  }
+
+  50% {
+    background-position: 100% 50%;
+  }
+
+  100% {
+    background-position: 0% 50%;
+  }
+}
+
 @media (max-width: 1100px) {
 
   header {
     padding: 24px 0px 35px 0px;
     position: relative;
   }
+
   .desktop-menu {
     display: none;
   }
@@ -180,6 +230,7 @@ body.dark .language-options li:hover {
 
   .mobile-menu-icon {
     display: block;
+    width: 34px;
   }
 
   .mobile-menu {
@@ -208,55 +259,7 @@ body.dark .language-options li:hover {
     color: #01172F;
   }
 
-  .mobile-menu.dark li a{
+  .mobile-menu.dark li a {
     color: #fff;
-  }
-}
-
-/* Loading Styles */
-.loading {
-  position: relative;
-}
-
-.loading .loading-item a {
-  visibility: hidden;
-}
-
-/* New loading styles for mobile menu icon and mobile logo */
-.loading .mobile-menu-icon,
-.loading #coffeeLogoMobile {
-  background: linear-gradient(90deg, #F9F5F2, #CCD1D5);
-  background-size: 200% 200%;
-  animation: loading 1.5s infinite;
-}
-
-.loading .mobile-menu-icon {
-  width: 48px !important;
-  height: 48px !important;
-  border-radius: 4px !important;
-}
-
-.loading #coffeeLogoMobile {
-  width: 140px !important;
-  height: 140px !important;
-  border-radius: 50% !important; /* Ensuring it's a perfect circle */
-}
-
-.loading .mobile-menu-icon img,
-.loading #coffeeLogoMobile img {
-  visibility: hidden;
-}
-
-@keyframes loading {
-  0% {
-    background-position: 0% 50%;
-  }
-
-  50% {
-    background-position: 100% 50%;
-  }
-
-  100% {
-    background-position: 0% 50%;
   }
 }
